@@ -1,8 +1,6 @@
 #include "ldapbackend.hh"
 
-#include <algorithm>
 #include <utility>
-#include <ctype.h> 
 
 static int Toupper(int c)
 {
@@ -14,14 +12,20 @@ LdapBackend::LdapBackend( const string &suffix )
 {
 	m_msgid = 0;
 	m_qname = "";
-	m_revlookup = 0;
 	setArgPrefix( "ldap" + suffix );
 
 	L << Logger::Notice << backendname << " Server = " << getArg( "host" ) << ":" << getArg( "port" ) << endl;
 
-	// Initialize connections and pass exeptions to caller
+	try
+	{
 	m_pldap = new PowerLDAP( getArg( "host" ), (u_int16_t) atoi( getArg( "port" ).c_str() ) );
 	m_pldap->simpleBind( getArg( "binddn" ), getArg( "secret" ) );
+	}
+	catch( LDAPException &e )
+	{
+		L << Logger::Error << backendname << " Ldap connection failed: " << e.what() << endl;
+		throw( AhuException( "Unable to bind to ldap server" ) );
+	}
 
 	L << Logger::Notice << backendname << " Ldap connection succeeded" << endl;
 }
@@ -43,40 +47,60 @@ bool LdapBackend::list( int domain_id )
 
 void LdapBackend::lookup( const QType &qtype, const string &qname, DNSPacket *dnspkt, int zoneid )
 {
-	int len = 0;
+	int i, len;
 	vector<string> parts;
 	string filter, attr, ipaddr;
 	char** attributes = attrany;
-	char* attronly[] = { "associatedDomain", NULL, NULL };
+	char* attronly[] = { NULL, NULL };
 
 
 	m_qtype = qtype;
 	m_qname = qname;
 	len = qname.length();
 
-	if( len > 20 && qname.substr( len - 13, 13 ) == ".in-addr.arpa" )
+	if( qname.substr( len - 5, 5 ) == ".arpa" || qname.substr( len - 4, 4 ) == ".int" )
 	{
-		m_revlookup = 1;
-		stringtok( parts, qname.substr( 0, len - 13 ), "." );
+		stringtok( parts, qname, "." );
+		if (parts[parts.size()-2] == "ip6" )
+		{
+			filter = "(aaaaRecord=" + parts[parts.size()-3];
+			for( i = parts.size() - 4; i >= 0; i-- )   // reverse and cut .ip6.arpa or .ip6.int
+			{
+				  filter += ":" + parts[i];
+			}
+			filter =  + ")";
+		}
+		else
+	{
 		filter = "(aRecord=" + parts[3] + "." + parts[2] + "." + parts[1] + "." + parts[0] + ")";
+		}
+
+		filter = m_pldap->escape( filter );
+		attronly[0] = "associatedDomain";
 		attributes = attronly;
 	}
 	else
 	{
-		m_revlookup = 0;
 		filter = "(associatedDomain=" + m_pldap->escape( m_qname ) + ")";
-	}
-
 	if( qtype.getCode() != QType::ANY )
 	{
 		attr = qtype.getName() + "Record";
 		filter = "(&" + filter + "(" + attr + "=*))";
-		attronly[1] = (char*) attr.c_str();
+			attronly[0] = (char*) attr.c_str();
 		attributes = attronly;
 	}
+	}
 
-	// Pass exception if an error occurs
+	try
+	{
 	m_msgid = m_pldap->search( getArg("basedn"), filter, (const char**) attributes );
+	}
+	catch( LDAPException &e )
+	{
+		L << Logger::Warning << backendname << " Unable to initiate search: " << e.what() << endl;
+		return;
+	}
+
 	L << Logger::Info << backendname << " Search = basedn: " << getArg( "basedn" ) << ", filter: " << filter << ", qtype: " << qtype.getName() << endl;
 }
 
@@ -90,23 +114,19 @@ bool LdapBackend::get( DNSResourceRecord &rr )
 	PowerLDAP::sentry_t::iterator attribute;
 
 
-	do
-	{
+Redo:
+
 		while( !m_result.empty() )
 		{
-			if( m_revlookup == 1 && m_result.find( "associatedDomain" ) != m_result.end() )
-			{
-				m_result["PTRRecord"] = m_result["associatedDomain"];
-			}
-			m_result.erase( "associatedDomain" );
-
 			attribute = m_result.begin();
+		if( attribute != m_result.end() && !attribute->second.empty() )
+		{
 			attrname = attribute->first;
 			qstr = attrname.substr( 0, attrname.length() - 6 );   // extract qtype string from ldap attribute name
 			transform( qstr.begin(), qstr.end(), qstr.begin(), &Toupper );
 			qt = QType( const_cast<char*>(qstr.c_str()) );
 
-			while( !attribute->second.empty() && ( m_qtype.getCode() == QType::ANY ||  m_qtype.getCode() == qt.getCode() ) )
+			if( m_qtype.getCode() == QType::ANY ||  m_qtype.getCode() == qt.getCode() )
 			{
 				content = attribute->second.back();
 				attribute->second.pop_back();
@@ -126,10 +146,26 @@ bool LdapBackend::get( DNSResourceRecord &rr )
 				L << Logger::Info << backendname << " Record = qname: " << rr.qname << ", qtype: " << (rr.qtype).getName() << ", priority: " << rr.priority << ", content: " << rr.content << endl;
 				return true;
 			}
+		}
 			m_result.erase( attribute );
 		}
+
+	try
+	{
+		if( m_pldap->getSearchEntry( m_msgid, m_result ) == true )
+		{
+				if( m_result.find( "associatedDomain" ) != m_result.end() )
+				{
+					m_result["PTRRecord"] = m_result["associatedDomain"];
+					m_result.erase( "associatedDomain" );
+				}
+				goto Redo;
+		}
 	}
-	while( m_pldap->getSearchEntry( m_msgid, m_result ) );
+	catch( LDAPException &e )
+	{
+		L << Logger::Warning << backendname << " Search failed: " << e.what() << endl;
+	}
 
 	return false;
 }
